# YarnRender

./: .gitignore  CMakeLists.txt  Globals.cpp  Globals.h  Makefile  YarnGeometry.cpp  YarnGeometry.h  YarnMath.cpp  YarnMath.h  YarnRender.cpp  bg.frag  bg.vert  cyGL.h  cyMatrix.h  dom_depth.frag  dom_depth.vert  dom_opacity.frag  dom_opacity.vert  plane.frag  plane.vert  shader.frag  shader.vert  shading_blinnphong.glsl  shading_kajiyakay.glsl  shading_marschner.glsl  shading_yarn.glsl
